@@ -1,3 +1,7 @@
+JO-2007-10-23-0: Bugfix:      o Returned method commit and rollback in Database class to previous state,
+                                state where they are not checking if connection is closed
+                              o removed some unnecessary logs
+
 AP-2007-10-23-0: Bugfix:      During the installation the admin user should create web.xml file
                  Bugster:     6620253
                  Review:      JG
